Pay Command done